; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_func_param.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_func_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, %struct.TYPE_9__* }

@type_int = common dso_local global %struct.TYPE_9__* null, align 8
@.str = private unnamed_addr constant [26 x i8] c"type expected, but got %s\00", align 1
@DECL_PARAM_TYPEONLY = common dso_local global i32 0, align 4
@DECL_PARAM = common dso_local global i32 0, align 4
@KIND_ARRAY = common dso_local global i64 0, align 8
@KIND_FUNC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_9__* (i8**, i32)* @read_func_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_9__* @read_func_param(i8** %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca %struct.TYPE_9__*, align 8
  store i8** %0, i8*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** @type_int, align 8
  store %struct.TYPE_9__* %9, %struct.TYPE_9__** %7, align 8
  %10 = call i32 (...) @peek()
  %11 = call i64 @is_type(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = call %struct.TYPE_9__* @read_decl_spec(i32* %6)
  store %struct.TYPE_9__* %14, %struct.TYPE_9__** %7, align 8
  br label %24

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = call i32 (...) @peek()
  %20 = call i32 (...) @peek()
  %21 = call i32 @tok2s(i32 %20)
  %22 = call i32 @errort(i32 %19, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %18, %15
  br label %24

24:                                               ; preds = %23, %13
  %25 = load i8**, i8*** %4, align 8
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %27 = load i32, i32* %5, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %24
  %30 = load i32, i32* @DECL_PARAM_TYPEONLY, align 4
  br label %33

31:                                               ; preds = %24
  %32 = load i32, i32* @DECL_PARAM, align 4
  br label %33

33:                                               ; preds = %31, %29
  %34 = phi i32 [ %30, %29 ], [ %32, %31 ]
  %35 = call %struct.TYPE_9__* @read_declarator(i8** %25, %struct.TYPE_9__* %26, i32* null, i32 %34)
  store %struct.TYPE_9__* %35, %struct.TYPE_9__** %8, align 8
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @KIND_ARRAY, align 8
  %40 = icmp eq i64 %38, %39
  br i1 %40, label %41, label %46

41:                                               ; preds = %33
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %43, align 8
  %45 = call %struct.TYPE_9__* @make_ptr_type(%struct.TYPE_9__* %44)
  store %struct.TYPE_9__* %45, %struct.TYPE_9__** %3, align 8
  br label %57

46:                                               ; preds = %33
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i64, i64* @KIND_FUNC, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %55

52:                                               ; preds = %46
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %54 = call %struct.TYPE_9__* @make_ptr_type(%struct.TYPE_9__* %53)
  store %struct.TYPE_9__* %54, %struct.TYPE_9__** %3, align 8
  br label %57

55:                                               ; preds = %46
  %56 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  store %struct.TYPE_9__* %56, %struct.TYPE_9__** %3, align 8
  br label %57

57:                                               ; preds = %55, %52, %41
  %58 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  ret %struct.TYPE_9__* %58
}

declare dso_local i64 @is_type(i32) #1

declare dso_local i32 @peek(...) #1

declare dso_local %struct.TYPE_9__* @read_decl_spec(i32*) #1

declare dso_local i32 @errort(i32, i8*, i32) #1

declare dso_local i32 @tok2s(i32) #1

declare dso_local %struct.TYPE_9__* @read_declarator(i8**, %struct.TYPE_9__*, i32*, i32) #1

declare dso_local %struct.TYPE_9__* @make_ptr_type(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
